--- a/scss/components/_mixin.scss
+++ b/scss/components/_mixin.scss
@@ -1,6 +1,10 @@
+@import '../components/mapas';
 @mixin posicion($display:flex, $align-items:stretch,$justify-content:flex-start){
     display: $display;
     align-items:$align-items;
     justify-content:$justify-content;
 
 }
+
+
+
