--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,21 @@
 @charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Sacramento&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Sacramento&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Sacramento&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Sacramento&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Sacramento&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Smokum&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Smokum&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Sacramento&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Sacramento&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Sacramento&display=swap");
 .header {
-  display: grid;
+  display: flex;
   align-items: center;
-  grid-template-columns: 0.2fr 1fr;
-  grid-template-rows: auto;
-  grid-template-areas: "header_logo" "header_menu";
+  margin-bottom: 2rem;
   position: sticky;
   top: 0;
-  grid-area: "header";
+  display: flex;
   z-index: 9999;
   background-color: white;
 }
@@ -29,9 +33,9 @@
   display: flex;
   align-items: center;
   justify-content: space-around;
-  flex: 2;
-  margin: auto 5rem auto 0;
-  grid-area: "header_menu";
+  flex: 5;
+  margin: auto 0 auto 0;
+  display: flex;
 }
 .header .header_menu div .panelmenu .menu {
   list-style: none;
@@ -60,8 +64,53 @@
   background-color: #19b4c1;
 }
 
+@media (max-width: 575px) {
+  .header_menu {
+    width: 100%;
+  }
+}
+@media (min-width: 576px) and (max-width: 767px) {
+  .header_menu {
+    width: 100%;
+  }
+}
+
+@media (max-width: 575px) {
+  #logo_menu2 {
+    display: none;
+  }
+}
+@media (min-width: 576px) and (max-width: 767px) {
+  #logo_menu2 {
+    display: none;
+  }
+}
+@media (min-width: 768px) and (max-width: 991px) {
+  #logo_menu2 {
+    display: none;
+  }
+}
+@media (min-width: 992px) and (max-width: 1199px) {
+  #logo_menu2 {
+    display: none;
+    flex: 1;
+  }
+}
+@media (min-width: 1200px) and (max-width: 1399px) {
+  #logo_menu2 {
+    display: flex;
+    flex: 1;
+  }
+}
+@media (min-width: 1400px) {
+  #logo_menu2 {
+    display: flex;
+    flex: 1;
+  }
+}
+
 .logo_contacto_footer {
-  width: 10%;
+  width: 30%;
 }
 
 #logo_petit_footer {
@@ -72,6 +121,22 @@
   flex: 0.37;
   width: 30%;
   border-radius: 34px;
+}
+
+@media (max-width: 575px) {
+  #footer_contenido {
+    display: flex;
+  }
+}
+@media (min-width: 576px) and (max-width: 767px) {
+  #footer_contenido {
+    display: flex;
+  }
+}
+@media (min-width: 768px) and (max-width: 991px) {
+  #footer_contenido {
+    display: flex;
+  }
 }
 
 .message:hover, .tel:hover, .email:hover, .name:hover {
@@ -106,6 +171,35 @@ h2 {
 }
 h2 #acercadenosotros p {
   font-size: 1rem;
+}
+
+/* carousel Inicio*/
+@media (min-width: 992px) and (max-width: 1199px) {
+  .carouselExampleControls {
+    width: 50%;
+  }
+}
+@media (min-width: 1200px) and (max-width: 1399px) {
+  .carouselExampleControls {
+    width: 50%;
+  }
+}
+@media (min-width: 1400px) {
+  .carouselExampleControls {
+    width: 50%;
+  }
+}
+
+/*  Estilos para la galeria */
+#galeria .row .col-lg-4 {
+  padding: 20px;
+}
+#galeria .row .col-lg-4 img {
+  width: 100%;
+  height: 350px;
+}
+#galeria .row .col-lg-4 img:hover {
+  border: 5px solid #f7f7f7;
 }
 
 /*  Estilos para el form de Contacto */
