--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,6 @@
   justify-content: space-around;
   flex: 5;
   margin: auto 0 auto 0;
-  display: flex;
 }
 .header .header_menu div .panelmenu .menu {
   list-style: none;
@@ -43,7 +42,7 @@
   justify-content: space-around;
 }
 .header .header_menu div .panelmenu .menu .menu_item {
-  padding: 0em 1em;
+  padding: 0 1em;
   margin: 1em;
   background-color: #41D9E6;
   font-size: 1.2em;
@@ -283,7 +282,7 @@ h2 #acercadenosotros p {
 
 @keyframes bounce {
   0% {
-    tranform: translate(0, 4px);
+    transform: translate(0, 4px);
   }
   50% {
     transform: translate(0, 8px);
