--- a/scss/base/_body.scss
+++ b/scss/base/_body.scss
@@ -153,7 +153,7 @@
   
   @keyframes bounce {
     0% {
-      tranform: translate(0, 4px);
+      transform: translate(0, 4px);
     }
     50% {
       transform: translate(0, 8px);
